--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -15,10 +15,10 @@
     "row.actions": "Actions",
     "row.delete": "Êtes-vous sûr de supprimer cette ligne ?",
     "year": "Année",
-    "year.null": "Tout",
+    "year.null": "tous",
     "year.select": " ",
     "month": "Mois",
-    "month.null": "Tout",
+    "month.null": "tous",
     "month.select": " ",
     "month.1": "Janvier",
     "month.2": "Février",
@@ -33,7 +33,7 @@
     "month.11": "Novembre",
     "month.12": "Décembre",
     "admin.mainMenu": "Administration",
-    "admin.menu.products": "Panier de soins",
+    "admin.menu.products": "Paquet de bénéficess",
     "admin.menu.healthFacilities": "Établissements de santé",
     "admin.menu.medicalServicesPrices": "Liste de prix des soins",
     "admin.menu.medicalItemsPrices": "Liste de prix des produits médicaux",
@@ -47,22 +47,22 @@
     "admin.menu.locations": "Sites",
     "claim_batch.menu.claim_batch": "Évaluation par lots",
     "claim_batch.BatchRun": "Évaluation par lots",
-    "claim_batch.BatchRunLauncher.title": "Lancer l'övaluation par lots",
+    "claim_batch.BatchRunLauncher.title": "Lancer l'évaluation par lots",
     "claim_batch.BatchRunSearcher.title": "Index des prix relatifs ({totalCount})",
     "claim_batch.AccountPreviewer.title": "Comptes",
     "claim_batch.batchRunSummaries.year": "Année",
     "claim_batch.batchRunSummaries.month": "Mois",
-    "claim_batch.batchRunSummaries.product": "Panier de soin",
+    "claim_batch.batchRunSummaries.product": "Paquet de bénéfices",
     "claim_batch.batchRunSummaries.careType": "Type de soins",
     "claim_batch.batchRunSummaries.calculatedDate": "Date calculée",
     "claim_batch.batchRunSummaries.index": "Index",
     "claim_batch.accountType": "Type",
-    "claim_batch.accountType.null": "Tout",
+    "claim_batch.accountType.null": "tous",
     "claim_batch.accountType.1": "Annuel",
     "claim_batch.accountType.4": "Trimestriel",
     "claim_batch.accountType.12": "Mensuel",
     "claim_batch.groupBy": "Groupe par",
-    "claim_batch.groupBy.P": "Panier de soin",
+    "claim_batch.groupBy.P": "Paquet de bénéfices",
     "claim_batch.previewer.dateFrom": "Date du",
     "claim_batch.previewer.dateTo": "Date à",
     "claim.mainMenu": "Prestations",
@@ -77,7 +77,7 @@
     "claim.claimStatus": "Statut de la prestation",
     "claim.code": "N° de prestation",
     "claim.guaranteeId": "N° de garantie",
-    "claim.claimStatus.null": "Tout",
+    "claim.claimStatus.null": "tous",
     "claim.claimStatus.1": "Rejeté",
     "claim.claimStatus.2": "Entré à",
     "claim.claimStatus.4": "Vérifié",
@@ -109,14 +109,14 @@
     "claim.explanation": "Explication",
     "claim.adjustment": "Ajustement",
     "claim.feedbackStatus": "Status des retours",
-    "claim.feedbackStatus.null": "Tout",
+    "claim.feedbackStatus.null": "tous",
     "claim.feedbackStatus.1": "Sel.",
     "claim.feedbackStatus.2": "Non sélectionné",
     "claim.feedbackStatus.4": "Sélectionné",
     "claim.feedbackStatus.8": "Faite",
     "claim.feedbackStatus.16": "Sans",
     "claim.reviewStatus": "Status vérification",
-    "claim.reviewStatus.null": "Tout",
+    "claim.reviewStatus.null": "tous",
     "claim.reviewStatus.1": "Sel.",
     "claim.reviewStatus.2": "Non sélectionnée",
     "claim.reviewStatus.4": "Sélectionnée",
@@ -266,12 +266,12 @@
     "insuree.Insuree.otherNames": "Autres noms",
     "location.HealthFacilityFullPath.region": "Région",
     "location.HealthFacilityFullPath.district": "District",
-    "location.HealthFacilityFullPath.healthFacility": "FOSA",
+    "location.HealthFacilityFullPath.healthFacility": "ESA",
     "location.RegionPicker.label": "Région",
     "location.DistrictPicker.label": "District",
     "location.HealthFacilityPicker.label": "Établissement de santé",
     "location.healthFacilityLevel": "Niveau des établissements de santé",
-    "location.healthFacilityLevel.null": "Tout",
+    "location.healthFacilityLevel.null": "tous",
     "location.healthFacilityLevel.C": "Centre de santé",
     "location.healthFacilityLevel.D": "Dispensaire",
     "location.healthFacilityLevel.H": "Hôpital",
@@ -282,12 +282,12 @@
     "medical.Service": "soin",
     "medical.ServicePicker.placehoder": "Recherche un soin",
     "medical.visitType": "Type de visite",
-    "medical.visitType.null": "Tout",
+    "medical.visitType.null": "tous",
     "medical.visitType.E": "Urgence",
     "medical.visitType.R": "Renvoi",
     "medical.visitType.O": "Autres",
     "medical.careType": "Type de soins",
-    "medical.careType.null": "Tout",
+    "medical.careType.null": "tous",
     "medical.careType.I": "Hospitalisé",
     "medical.careType.O": "Ambulatoire",
     "medical.careType.B": "Ambulatoire et hospitalisé",
@@ -322,8 +322,8 @@
     "policy.insureeEligibility.antenatalAmountLeft": "Prénatal",
     "policy.insureeEligibility.minDate": "Min Date",
     "policy.insureeEligibility.left": "A gauche",
-    "product.Product": "Panier de soin",
-    "product.ProductPicker.placehoder": "Rechercher un Panier de soin...",
+    "product.Product": "Paquet de bénéfices",
+    "product.ProductPicker.placehoder": "Rechercher un Paquet de bénéfices...",
     "profile.mainMenu": "Profil",
     "profile.menu.changePassword": "Changer de mot de passe",
     "tools.mainMenu": "Outils",
@@ -354,12 +354,12 @@
     "claim.deleteClaims.confirm.message": "Êtes-vous sûr de vouloir supprimer les prestations de {count} ?",
     "claim.DeleteClaim.mutationLabel": "Effacer la prestation {code}",
     "location.healthFacilitySubLevel": "Sous-niveau des établissements de santé",
-    "location.healthFacilitySubLevel.null": "Tout",
+    "location.healthFacilitySubLevel.null": "tous",
     "location.healthFacilitySubLevel.I": "Intégré",
     "location.healthFacilitySubLevel.N": "Pas de sous-niveau",
     "location.healthFacilitySubLevel.R": "Référence",
     "location.healthFacilityLegalForm": "Forme juridique de l'établissement de santé",
-    "location.healthFacilityLegalForm.null": "Tout",
+    "location.healthFacilityLegalForm.null": "tous",
     "location.healthFacilityLegalForm.C": "Charité",
     "location.healthFacilityLegalForm.D": "Organisation du district ",
     "location.healthFacilityLegalForm.G": "Gouvernement",
@@ -441,7 +441,7 @@
     "claim.lastVisitDate": "Date de dernière visite",
     "claim.feedbackButton.tooltip": "Donnez votre avis",
     "claim.reviewButton.tooltip": "Faire la vérification",
-    "claim.ClaimFilter.BatchRuns.any": "Tout",
+    "claim.ClaimFilter.BatchRuns.any": "tous",
     "claim.claimSummaries.claimAttachments": "Pièces jointes",
     "claim.attachments.title": "Pièces jointes à la prestation {code}",
     "claim.edit.claimCodeExists": "Code de prestation déjà enregistré",
@@ -492,5 +492,15 @@
     "location.HealthFacilityPicker.null": "Tous",
     "medical.DiagnosisPicker.null": "Tous",
     "medical.ItemPicker.null": "Tous",
-    "medical.ServicePicker.null": "Tous"
+    "medical.ServicePicker.null": "Tous",
+    "location.locations.page.title": "",
+    "location.healthFacilities.page.title": "",
+    "location.healthFacility.edit.page.title": "",
+    "claim.healthFacilityClaims.page.title": "",
+    "claim.reviews.page.title": "",
+    "claim.ClaimOfficerPicker.null": "",
+    "claim.claimSummaries.openNewTab": "",
+    "claim.edit.page.title": "",
+    "claim_batch.claimBatch.page.title": "",
+    "location.healthFacilitySummaries.accCode": "Code comptable"
 }
