insuree& families keys refactorings

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -293,16 +293,16 @@
     "medical.careType.B": "Ambulatoire et hospitalisé",
     "policy.menu.policies": "Polices",
     "policy.menu.contributions": "Contributions",
-    "policy.insureePolicies.header": "Polices familiales",
-    "policy.insureePolicies.productCode": "Code",
-    "policy.insureePolicies.productName": "Nom",
-    "policy.insureePolicies.expiryDate": "Date d'expiration",
-    "policy.insureePolicies.status": "Statut",
-    "policy.insureePolicies.hospitalDeduction": "Déduction pour les hôpitaux",
-    "policy.insureePolicies.nonHospitalDeduction": "Déduction non hospitalière",
-    "policy.insureePolicies.hospitalCeiling": "Plafond de l'hôpital",
-    "policy.insureePolicies.nonHospitalCeiling": "Plafond non hospitalier",
-    "policy.insureePolicies.balance": "Balance",
+    "policy.policies.header": "Polices familiales",
+    "policy.policies.productCode": "Code",
+    "policy.policies.productName": "Nom",
+    "policy.policies.expiryDate": "Date d'expiration",
+    "policy.policies.status": "Statut",
+    "policy.policies.hospitalDeduction": "Déduction pour les hôpitaux",
+    "policy.policies.nonHospitalDeduction": "Déduction non hospitalière",
+    "policy.policies.hospitalCeiling": "Plafond de l'hôpital",
+    "policy.policies.nonHospitalCeiling": "Plafond non hospitalier",
+    "policy.policies.balance": "Balance",
     "policy.insureeEligibility.service": "Admissibilité des soins",
     "policy.insureeEligibility.service.search": "Recherche un soin",
     "policy.insureeEligibility.item": "Admissibilité des produits médicaux",
@@ -469,9 +469,9 @@
     "medical.careType.none": "",
     "medical_pricelist.servicesPricelist": "Liste des prix des soins",
     "medical_pricelist.itemsPricelist": "Liste des prix des produits médicaux",
-    "policy.insureePolicies.deduction": "Déduction",
-    "policy.insureePolicies.ceiling": "Plafond",
-    "policy.insureePolicies.noActivePolicy": "Pas de Police active",
+    "policy.policies.deduction": "Déduction",
+    "policy.policies.ceiling": "Plafond",
+    "policy.policies.noActivePolicy": "Pas de Police active",
     "claim_batch.BatchRunPicker.null": "Tous",
     "claim.ClaimAdminPicker.null": "Tous",
     "claim.claimSummaries.markDeliveredReview": "Vérification faite",
