added policy migration keys

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -784,5 +784,88 @@
     "saveTooltip": "Enregistrer les modifications",
     "insuree.addNewFamilyTooltip": "Créer une nouvelle famille",
     "insuree.addNewInsureeTooltip": "Créer un nouvel assuré",
-    "insuree.selectHeadInsuree.tooltip": "Sélectionner un assuré existant comme chef"
+    "insuree.selectHeadInsuree.tooltip": "Sélectionner un assuré existant comme chef",
+    "claim.newClaim.tooltip": "Créer une nouvelle prestation",
+    "contribution.deletePremium.tooltip": "Supprimer la prime",
+    "contribution.addNewPremium.tooltip": "Ajouter une nouvelle prime",
+    "insuree.familyCheckCanAdd": "Vérification de l'ajout d'une assuré",
+    "insuree.addInsuree.alert.title": "Avertissements pour l'ajout de l'assuré:",
+    "insuree.addInsuree.alert.message": "Cependant, l'assuré peut toujours être ajouté à la famille.",
+    "payment.addNewPayment.tooltip": "Ajouter un nouveau paiement",
+    "policy.action.AddPolicy.tooltip": "Créer une nouvelle police",
+    "policy.action.DeletePolicy.tooltip": "Supprimer la police",
+    "policy.action.SuspendPolicy.tooltip": "Suspendre la politice",
+    "policy.action.RenewPolicy.tooltip": "Renouveler la police",
+    "policy.PolicyOfficerPicker.label": "Agent",
+    "policy.PolicyOfficerPicker.null": "Tout",
+    "policy.PolicyOfficer.none": "Aucun",
+    "policy.PolicyFilter.enrollDateFrom": "Inscription à partir de",
+    "policy.PolicyFilter.enrollDateTo": "Inscription jusqu'à",
+    "policy.PolicyFilter.startDateFrom": "Date de début à partir de",
+    "policy.PolicyFilter.startDateTo": "Date de début jusqua'au",
+    "policy.PolicyFilter.effectiveDateFrom": "En vigueur à partir du",
+    "policy.PolicyFilter.effectiveDateTo": "En vigueur jusqua'au",
+    "policy.PolicyFilter.expiryDateFrom": "Expiration à partir de",
+    "policy.PolicyFilter.expiryDateTo": "Expiration jusqu'au",
+    "policy.PolicyFilter.policyStatus": "Statut police",
+    "policy.PolicyFilter.balanceLte": "Solde sous",
+    "policy.PolicyFilter.balanceGte": "Solde au-dessus",
+    "policy.PolicyFilter.showHistory": "Afficher valeurs historiques",
+    "policy.PolicyFilter.showInactive": "Uniquement avec des assurés inactifs",
+    "policy.PolicyStatus": "Statut",
+    "policy.PolicyStatus.null": "Tout",
+    "policy.PolicyStatus.none": "Aucun",
+    "policy.PolicyStatus.1": "Entrée",
+    "policy.PolicyStatus.2": "Active",
+    "policy.PolicyStatus.4": "Suspendue",
+    "policy.PolicyStatus.8": "Expirée",
+    "policy.PolicyStatus.16": "Prête",
+    "policy.PolicyStage": "Type",
+    "policy.PolicyStage.null": "Tout",
+    "policy.PolicyStage.N": "Nouvelle police",
+    "policy.PolicyStage.R": "Police renouvelée",
+    "policy.policySummaries": "{count} Polices trouvées",
+    "policy.policySummaries.enrollDate": "Inscription",
+    "policy.policySummaries.name": "Nom",
+    "policy.policySummaries.effectiveDate": "Effective",
+    "policy.policySummaries.startDate": "Début",
+    "policy.policySummaries.expiryDate": "Expiration",
+    "policy.policySummaries.product": "Produit",
+    "policy.policySummaries.officer": "Agent",
+    "policy.policySummaries.stage": "Type",
+    "policy.policySummaries.status": "Statut",
+    "policy.policySummaries.value": "Valeur",
+    "policy.policySummaries.balance": "Solde",
+    "policy.policySummaries.validityFrom": "Valide à partir de",
+    "policy.policySummaries.validityTo": "Valide jusqu'à",
+    "policy.policySummaries.openFamily": ".",
+    "policySummaries.openFamilyButton.tooltip": "Ouvrir famille",
+    "policy.policySummaries.openNewTab": ".",
+    "policy.policySummaries.openNewTabButton.tooltip": "Ouvrir dans un nouvel onglet",
+    "policy.policySummaries.renew": ".",
+    "policy.policySummaries.suspend": ".",
+    "policy.policySummaries.delete": ".",
+    "policy.Policy.title": "Police {label}",
+    "policy.Policy.details.title": "Détails de la police",
+    "policy.action.suspend.tooltip": "Suspendre la police",
+    "policy.Policy.values.title": "Valeurs de la police",
+    "policy.Policy.value": "Valeur",
+    "policy.Policy.sumPremiums": "Cotisations payées",
+    "policy.Policy.balance": "Solde",
+    "policy.Policy.enrollDate": "Date d'inscription",
+    "policy.Policy.effectiveDate": "Date d'entrée en vigueur",
+    "policy.Policy.startDate": "Date de début",
+    "policy.Policy.expiryDate": "Date d'expiration",
+    "policy.CreatePolicy.mutationLabel": "Création de la police {policy}",
+    "policy.UpdatePolicy.mutationLabel": "Mettre à jour la police {policy}",
+    "policy.RenewPolicy.mutationLabel": "Renouveler la police {policy}",
+    "policy.SuspendPolicy.mutationLabel": "Suspendre la police {policy}",
+    "policy.suspendPolicyDialog.title": "Suspendre la polic?",
+    "policy.suspendPolicyDialog.message": "Êtes-vous sûr de vouloir suspendre la police {label} ?",
+    "policy.DeletePolicy.mutationLabel": "Suppression de la police {policy}",
+    "policy.deletePolicyDialog.title": "Supprimer la police?",
+    "policy.deletePolicyDialog.message": "Êtes-vous sûr de vouloir supprimer la police {label} ? Les contributions liées seront supprimées (mais pas les paiements).",
+    "policy.policyValues.alert.title": "Avertissement sur les valeurs de la police :",
+    "policy.policyValues.alert.message": "Cependant, la police peut être créée.",
+    "product.Product.none": "Aucun"
 }
