--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -867,5 +867,81 @@
     "policy.deletePolicyDialog.message": "Êtes-vous sûr de vouloir supprimer la police {label} ? Les contributions liées seront supprimées (mais pas les paiements).",
     "policy.policyValues.alert.title": "Avertissement sur les valeurs de la police :",
     "policy.policyValues.alert.message": "Cependant, la police peut être créée.",
-    "product.Product.none": "Aucun"
+    "product.Product.none": "Aucun",
+    "contribution.reload.tooltip": "Recharger",
+    "contribution.addNewPremium.tooltip.selectPolicy": "Veuillez choisir une police pour ajouter une contribution",
+    "contribution.amount": "Montant",
+    "contribution.amount_Gte": "Montant supérieur",
+    "contribution.amount_Lte": "Montant inférieur à",
+    "contribution.category": "Catégorie de contribution",
+    "contribution.category.contribution": "Contribution",
+    "contribution.category.null": "Tout",
+    "contribution.category.photoFee": "Frais de photo",
+    "contribution.ContributionOverview.newTitle": "Ajouter une cotisation",
+    "contribution.ContributionOverview.title": "Détails de la contribution",
+    "contribution.contributionSummaries": "{count} contributions trouvées",
+    "contribution.CreateContribution.mutationLabel": "Créer une cotisation",
+    "contribution.deleteContributionDialog.message": "Voulez-vous vraiment supprimer cette cotisation?",
+    "contribution.deleteContributionDialog.title": "Supprimer une cotisation",
+    "contribution.deleteContributionDialog.yes.button": "Oui",
+    "contribution.openNewTab": "Ouvrir dans un nouvel onglet",
+    "contribution.openNewTabHead": " ",
+    "contribution.payDate": "Date de paiement",
+    "contribution.payDateFrom": "Date paiement depuis",
+    "contribution.payDateTo": " Date paiement jusqu'à",
+    "contribution.payer": "Payeur",
+    "contribution.payType": "Type de paiement",
+    "contribution.payType.B": "Virement bancaire",
+    "contribution.payType.C": "Espèces",
+    "contribution.payType.M": "Téléphone portable",
+    "contribution.payType.null": "Tout",
+    "contribution.policy": "Police",
+    "contribution.PremiumPaymentTypePicker.label": "Type de paiement",
+    "contribution.receipt": "N° de reçu",
+    "contribution.showHistory": "Afficher les valeurs historiques",
+    "contribution.UpdateContribution.mutationLabel": "Modifier la contribution",
+    "contribution.saveContributionDialog.title": "Confirmation contribution",
+    "contribution.saveContributionDialog.messageLower": "Si la cotisation versée est inférieure au prix de la police:",
+    "contribution.saveContributionDialog.messageLowerConfirm": "Est-ce que la police doit entrer en vigueur?",
+    "contribution.saveContributionDialog.messageEqual": "La cotisation correspond au tarif de la police d'assurance",
+    "contribution.saveContributionDialog.messageHigher": "La contribution dépasse le prix du contrat.",
+    "contribution.saveContributionDialog.ok.button": "OK",
+    "contribution.saveContributionDialog.yes.button": "Oui",
+    "contribution.saveContributionDialog.no.button": "Non",
+    "contribution.policy.name": "Police",
+    "contribution.policy.value": "Montant de la police",
+    "contribution.policy.startDate": "Date de début",
+    "contribution.policy.expiryDate": "Date d'expiration",
+    "payment.addNewPaymentTooltip": "Ajouter un nouveau paiement",
+    "payment.CreatePayment.mutationLabel": "Créer un paiement",
+    "payment.deletePayment.tooltip": "Supprimer le paiement",
+    "payment.addNewPayment.tooltip.selectPremium": "Sélectionnez une contribution pour ajouter un paiement",
+    "payment.deletePaymentDialog.message": "Êtes-vous sûr de vouloir effacer ce paiement ?",
+    "payment.deletePaymentDialog.title": "Supprimer le paiement",
+    "payment.deletePaymentDialog.yes.button": "Oui",
+    "payment.expectedAmount_Gte": "Montant attendu depuis",
+    "payment.expectedAmount_Lte": "Montant attendu jusqu'à",
+    "payment.menu.payments": "Paiements",
+    "payment.openNewTab": "Ouvrir dans un nouvel onglet",
+    "payment.openNewTabHead": ".",
+    "payment.payment.dateLastSms": "Date du dernier SMS",
+    "payment.payment.matchedDate": "Date d'association",
+    "payment.payment.officer": "Agent",
+    "payment.payment.officerCode": "Code de l'agent",
+    "payment.payment.origin": "Origine",
+    "payment.payment.receivedDateFrom": "Date de réception depuis",
+    "payment.payment.receivedDateTo": "Date de réception jusqu'à",
+    "payment.payment.rejectedReason": "Motif du rejet",
+    "payment.payment.requestDateFrom": "Date de la demande depuis",
+    "payment.payment.requestDateTo": "Date de la demande jusqu'à",
+    "payment.payment.transferFee": "Frais de transfert",
+    "payment.PaymentFilter.status": "Statut",
+    "payment.PaymentFilter.typeOfPayment": "Type de paiement",
+    "payment.PaymentOverview.newTitle": "Nouveau paiement",
+    "payment.PaymentOverview.title": "Détails Paiement",
+    "payment.paymentSummaries": "{count} paiement(s) trouvé(s)",
+    "payment.receivedAmount_Gte": "Montant reçu depuis",
+    "payment.receivedAmount_Lte": "Montant reçu jusqu'à",
+    "payment.showHistory": "Afficher les valeurs historiques",
+    "payment.UpdatePayment.mutationLabel": "Modifier le paiement"
 }
