--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -37,7 +37,7 @@
     "admin.menu.healthFacilities": "Établissements de santé",
     "admin.menu.medicalServicesPrices": "Liste de prix des soins",
     "admin.menu.medicalItemsPrices": "Liste de prix des produits médicaux",
-    "admin.menu.medicalServices": "soins",
+    "admin.menu.medicalServices": "Soins",
     "admin.menu.medicalItems": "Produit médical",
     "admin.menu.users": "Utilisateurs",
     "admin.menu.usersProfiles": "Profils des utilisateurs",
@@ -168,8 +168,8 @@
     "claim.edit.items.price": "Prix",
     "claim.edit.items.explanation": "Explication",
     "claim.edit.items.justification": "Justification",
-    "claim.edit.items.appQuantity": "App. Quantité",
-    "claim.edit.items.appPrice": "App. Prix",
+    "claim.edit.items.appQuantity": "Quantité App. ",
+    "claim.edit.items.appPrice": "Prix App.",
     "claim.edit.items.status": "Statut",
     "claim.edit.items.rejectionReason": "R",
     "claim.edit.items.delete": " ",
@@ -943,5 +943,172 @@
     "payment.receivedAmount_Gte": "Montant reçu depuis",
     "payment.receivedAmount_Lte": "Montant reçu jusqu'à",
     "payment.showHistory": "Afficher les valeurs historiques",
-    "payment.UpdatePayment.mutationLabel": "Modifier le paiement"
+    "payment.UpdatePayment.mutationLabel": "Modifier le paiement",
+    "policy_notification.NotificationLanguage.none": "",
+    "policy_notification.NotificationLanguage.label": "",
+    "policy_notification.languageOfNotification.null": "",
+    "policy_notification.notificationApproval": "",
+    "policy_notification.ModePicker.placehoder": "",
+    "policy_notification.ModePicker.label": "",
+    "policy_notification.Mode.null": "",
+    "policy_notification.Mode.0": "",
+    "policy_notification.Mode.1": "",
+    "policy_notification.Mode.2": "",
+    "policy_notification.Mode.3": "",
+    "policy_notification.Mode.4": "",
+    "policy_notification.ReportModal": "",
+    "policy_notification.disabledReportNoRegion": "Le filtre par localisation au minimum requis",
+    "medical.careType.any": "Tout",
+    "medical.serviceType": "Type de service",
+    "medical.serviceType.null": "Aucun",
+    "medical.serviceType.any": "Tout",
+    "medical.serviceType.P": "Préventif",
+    "medical.serviceType.C": "Curatif",
+    "medical.itemType": "Type d'article",
+    "medical.itemType.null": "Aucun",
+    "medical.itemType.any": "Tout",
+    "medical.itemType.D": "Médicament",
+    "medical.itemType.M": "Consommable",
+    "medical.serviceCategory": "Catégorie de service",
+    "medical.serviceCategory.null": "Aucun",
+    "medical.serviceCategory.S": "Chirurgie",
+    "medical.serviceCategory.D": "Livraison",
+    "medical.serviceCategory.A": "Prénatal",
+    "medical.serviceCategory.H": "Hospitalisation",
+    "medical.serviceCategory.C": "Consultation",
+    "medical.serviceCategory.O": "Autre",
+    "medical.serviceCategory.V": "Visite",
+    "medical.serviceLevel": "Niveau de service",
+    "medical.serviceLevel.null": "Aucun",
+    "medical.serviceLevel.S": "Soin ordinaire",
+    "medical.serviceLevel.V": "Visite",
+    "medical.serviceLevel.D": "Hôpital de jour",
+    "medical.serviceLevel.H": "Soins hospitaliers",
+    "medical.patientCategory.1": "Masculin",
+    "medical.patientCategory.2": "Féminin",
+    "medical.patientCategory.4": "Adulte",
+    "medical.patientCategory.8": "Mineur",
+    "medical.service.MedicalServiceOverview.newTitle": "Nouveau service médical",
+    "medical.service.medicalServiceSummaries": "{count} service(s) médical(aux) trouvé(s)",
+    "medical.addNewMedicalService.tooltip": "Ajouter un nouveau service médical",
+    "medical.service.careType": "Type de soins",
+    "medical.service.category": "Catégorie",
+    "medical.service.frequency": "Fréquence",
+    "medical.service.patientCategory": "Catégorie de patient",
+    "medical.service.openNewTab": "Ouvrir dans un nouvel onglet",
+    "medical.service.MedicalServiceOverview.title": "Détails des services médicaux",
+    "medical.service.code": "Code",
+    "medical.service.name": "Nom",
+    "medical.service.type": "Type",
+    "medical.service.level": "Niveau",
+    "medical.service.price": "Prix",
+    "medical.service.validFrom": "Valide à partir de",
+    "medical.service.validTo": "Valide jusqu'à",
+    "medical.service.deleteDialog.message": "Êtes-vous sûr de vouloir supprimer ce service ?",
+    "medical.service.deleteDialog.title": "Confirmer la suppression",
+    "medical.service.deleteDialog.yes.button": "Oui",
+    "medical.service.deleteService.tooltip": "Supprimer le service",
+    "medical.service.deleteServiceDialog.message": "",
+    "medical.service.update.mutationLabel": "Modification de service médical",
+    "medical.item.MedicalItemOverview.newTitle": "Nouvel article médical",
+    "medical.item.medicalItemSummaries": "{count} article(s) médical(aux) trouvé(s)",
+    "medical.addNewMedicalItem.tooltip": "Ajouter un article médical",
+    "medical.item.careType": "Type de soins",
+    "medical.item.category": "Catégorie",
+    "medical.item.frequency": "Fréquence",
+    "medical.item.patientCategory": "Catégorie de patient",
+    "medical.item.openNewTab": "Ouvrir dans un nouvel onglet",
+    "medical.item.itemsTitle": "Produit médical",
+    "medical.item.itemTitle": "Produit médical",
+    "medical.service.servicesTitle": "Soins",
+    "medical.service.serviceTitle": "soin",
+    "medical.service.overviewTitle": "Détails des services médicaux",
+    "medical.item.overviewTitle": "Détails d'un article médical",
+    "medical.item.code": "Code",
+    "medical.item.name": "Nom",
+    "medical.item.type": "Type",
+    "medical.item.package": "Paquet",
+    "medical.item.price": "Prix",
+    "medical.item.validFrom": "Valide à partir de",
+    "medical.item.validTo": "Valide jusqu'à",
+    "medical.item.deleteDialog.message": "Êtes-vous sûr de vouloir supprimer cet article ?",
+    "medical.item.deleteDialog.title": "Confirmer la suppression",
+    "medical.item.deleteDialog.yes.button": "Oui",
+    "medical.item.deleteItem.tooltip": "Effacer l'article",
+    "medical.item.deleteItemDialog.message": "Êtes-vous sûr de vouloir supprimer cet article ?",
+    "medical.item.updateMedicalItem.mutationLabel": "Modification d'un produit médical",
+    "medical_pricelist.pricelistsSearcher.table.title": "{count} listes de prix",
+    "medical_pricelist.name": "Nom",
+    "medical_pricelist.pricelist_date": "Date",
+    "medical_pricelist.region": "Région",
+    "medical_pricelist.district": "District",
+    "medical_pricelist.showHistory": "Afficher les valeurs historiques",
+    "medical_pricelist.valid_from": "Valide à partir de",
+    "medical_pricelist.valid_to": "Valide jusqu'à",
+    "medical_pricelist.openNewTab": "Ouvrir dans un nouvel onglet",
+    "medical_pricelist.addNewPriceListTooltip": "Ajouter une nouvelle liste de prix",
+    "medical_pricelist.deletePricelistTooltip": "Supprimer",
+    "medical_pricelist.pricelistForm.title": "List de prix ({label})",
+    "medical_pricelist.pricelistForm.selectAll": "Sélectionner tout",
+    "medical_pricelist.pricelistForm.table.title": "Détails",
+    "medical_pricelist.pricelistForm.emptyTitle": "Nouvelle liste de prix",
+    "medical_pricelist.table.code": "Code",
+    "medical_pricelist.table.overrule": "Prix",
+    "medical_pricelist.table.price": "Prix",
+    "medical_pricelist.table.name": "Nom",
+    "medical_pricelist.table.type": "Type",
+    "medical_pricelist.table.type.c": "Curatif",
+    "medical_pricelist.table.type.p": "Préventif",
+    "medical_pricelist.table.type.d": "Médicament",
+    "medical_pricelist.table.editOverruleButton": "Éditer",
+    "medical_pricelist.priceOverruleDialog.title": "Forcer le prix",
+    "medical_pricelist.priceOverruleDialog.message": "Vous pouvez forcer le prix de cet élément pour cette liste de prix",
+    "medical_pricelist.priceOverruleDialog.yes.button": "Sauvegarder",
+    "medical_pricelist.priceOverruleDialog.clear.button": "Effacer",
+    "medical_pricelist.priceOverruleDialog.input": "Prix",
+    "medical_pricelist.createPricelist.mutationLabel": "Liste de prix créée",
+    "medical_pricelist.updatePricelist.mutationLabel": "Liste de prix mise à jour",
+    "medical_pricelist.deletePricelist.mutationLabel": "Liste de prix supprimée - {name}",
+    "medical_pricelist.deletePricelistDialog.title": "Effacer la liste de prix",
+    "medical_pricelist.deletePricelistDialog.message": "Voulez-vous vraiment supprimer cette liste de prix ?",
+    "core.roleManagement.label": "Gestion des rôles",
+    "core.roleManagement.searcher.results.title": "{rolesTotalCount} rôles trouvés",
+    "core.roleManagement.roleName": "Nom du rôle",
+    "core.roleManagement.altLanguage": "Langue alternative",
+    "core.roleManagement.isSystem": "Système",
+    "core.roleManagement.isBlocked": "Bloqué",
+    "core.roleManagement.showHistory": "Afficher valeurs historiques",
+    "core.roleManagement.dateValidFrom": "Valide à partir du",
+    "core.roleManagement.dateValidTo": "Valide jusqu'au",
+    "core.roleManagement.emptyLabel": ".",
+    "core.roleManagement.null": "Tout",
+    "core.roleManagement.true": "Vrai",
+    "core.roleManagement.false": "Faux",
+    "core.roleManagement.createButton.tooltip": "Créer un nouveau rôle",
+    "core.roleManagement.role.page.title": "Détails du rôle {label}",
+    "core.roleManagement.requiredFieldsEmptyError": "* Ces champs sont obligatoires",
+    "core.roleManagement.saveButton.tooltip.enabled": "Enregistrer les modifications",
+    "core.roleManagement.saveButton.tooltip.disabled": "Veuillez d'abord remplir les champs obligatoires",
+    "core.roleManagement.role.availableRights": "Permissions disponibles",
+    "core.roleManagement.role.chosenRights": "Permissions choisies",
+    "core.roleManagement.role.rightsFilter": "Filtre",
+    "core.roleManagement.CreateRole.mutationLabel": "Créer un rôle {label}",
+    "core.roleManagement.DeleteRole.mutationLabel": "Supprimer le rôle {label}",
+    "core.roleManagement.deleteButton.tooltip": "Supprimer",
+    "core.roleManagement.deleteRole.confirm.title": "Voulez-vous vraiment supprimer {label} ?",
+    "core.roleManagement.deleteRole.confirm.message": "Supprimer des données ne signifie pas les effacer d'OpenIMIS. Les données ne seront désactivées que dans la liste consultée.",
+    "core.roleManagement.UpdateRole.mutationLabel": "Mettre à jour le rôle {label}",
+    "core.roleManagement.editButton.tooltip": "Éditer",
+    "core.roleManagement.updateRole.confirm.title": "Sauver les changements dans {label} ?",
+    "core.roleManagement.updateRole.confirm.message": "Êtes-vous sûr de vouloir sauver les changements dans {label} ?",
+    "core.roleManagement.DuplicateRole.mutationLabel": "Dupliquer le rôle {label}",
+    "core.roleManagement.duplicateButton.tooltip": "Doublon",
+    "core.Autocomplete.loadingText": "Chargement…",
+    "core.Autocomplete.clearText": "Effacer",
+    "core.Autocomplete.openText": "Ouvrir",
+    "core.Autocomplete.closeText": "Fermer",
+    "core.Autocomplete.placeholder": "Recherche...",
+    "core.table.resultsLoading": "Chargement…",
+    "LanguagePicker.label": "Langue",
+    "core.Language.null": ""
 }
