Add Admin + notification

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -944,13 +944,13 @@
     "payment.receivedAmount_Lte": "Montant reçu jusqu'à",
     "payment.showHistory": "Afficher les valeurs historiques",
     "payment.UpdatePayment.mutationLabel": "Modifier le paiement",
-    "policy_notification.NotificationLanguage.none": "",
-    "policy_notification.NotificationLanguage.label": "",
-    "policy_notification.languageOfNotification.null": "",
-    "policy_notification.notificationApproval": "",
-    "policy_notification.ModePicker.placehoder": "",
-    "policy_notification.ModePicker.label": "",
-    "policy_notification.Mode.null": "",
+    "policy_notification.NotificationLanguage.none": "Langue de notification",
+    "policy_notification.NotificationLanguage.label": "Langue de notification",
+    "policy_notification.languageOfNotification.null": "Langue de notification",
+    "policy_notification.notificationApproval": "Approuver la notification",
+    "policy_notification.ModePicker.placehoder": "Notification activée",
+    "policy_notification.ModePicker.label": "Notification activée",
+    "policy_notification.Mode.null": "Tous",
     "policy_notification.Mode.0": "",
     "policy_notification.Mode.1": "",
     "policy_notification.Mode.2": "",
@@ -1110,5 +1110,66 @@
     "core.Autocomplete.placeholder": "Recherche...",
     "core.table.resultsLoading": "Chargement…",
     "LanguagePicker.label": "Langue",
-    "core.Language.null": ""
+    "core.Language.null": "",
+    "admin.UserPicker.label": "Utilisateur",
+    "admin.UserPicker.null": "Tout",
+    "admin.showHistory": "Afficher les valeurs historiques",
+    "admin.user.CreateUser.mutationLabel": "",
+    "admin.user.UserOverview.newTitle": "",
+    "admin.user.UserOverview.title": "Détails de l'utilisateur",
+    "admin.user.address": "Adresse",
+    "admin.user.addNewUser.tooltip": "Ajouter un nouvel utilisateur",
+    "admin.user.addNewUserTooltip": "Ajouter un nouvel utilisateur",
+    "admin.user.createUser.mutationLabel": "Créer un utilisateur",
+    "admin.user.deleteDialog.message": "Êtes-vous sûr de vouloir supprimer cet utilisateur ?",
+    "admin.user.deleteDialog.title": "Supprimer l'utilisateur",
+    "admin.user.deleteDialog.yes.button": "Oui",
+    "admin.user.deleteUser.tooltip": "Supprimer l'utilisateur",
+    "admin.user.deleteUserDialog.message": "Êtes-vous sûr de vouloir supprimer cet utilisateur ?",
+    "admin.user.dob": "Date de naissance",
+    "admin.user.dobFrom": "Date de naissance à partir du",
+    "admin.user.dobTo": "Date de naissance jusqu'au",
+    "admin.user.email": "Email",
+    "admin.user.districts": "Districts",
+    "admin.user.regions": "Régions",
+    "admin.user.lastName": "Nom de famille",
+    "admin.user.language": "Langue de l'interface",
+    "admin.user.openNewTab": "Ouvrir dans un nouvel onglet",
+    "admin.user.otherNames": "Prénoms",
+    "admin.user.givenNames": "Prénoms",
+    "admin.user.password": "Mot de passe",
+    "admin.user.newPassword": "Nouveau mot de passe",
+    "admin.user.confirmNewPassword": "Confirmer le mot de passe",
+    "admin.user.phone": "Téléphone",
+    "admin.user.updateUser.mutationLabel": "Modifier l'utilisateur",
+    "admin.user.userRoles": "Rôle(s) utilisateur(s)",
+    "admin.user.userRoles.noOptions": "Aucun rôle d'utilisateur trouvé",
+    "admin.user.userSummaries": "{count} utilisateur(s) trouvé(s)",
+    "admin.user.userTypes": "Type(s) d'utilisateur",
+    "admin.user.userTypes.CLAIM_ADMIN": "Gestionnaire de prestations",
+    "admin.user.userTypes.INTERACTIVE": "Interactif",
+    "admin.user.userTypes.OFFICER": "Agent d'inscription",
+    "admin.user.userTypes.noOptions": "Aucun type d'utilisateur trouvé",
+    "admin.user.userTypes.none": ".",
+    "admin.user.userTypes.null": "Tout",
+    "admin.user.username": "Identifiant d'utilisateur",
+    "admin.user.worksTo": "Date de fin d'emploi",
+    "admin.EnrolmentOfficerFormPanel.title": "Agent d'inscription",
+    "admin.ClaimAdministratorFormPanel.title": "Administrateur des prestations",
+    "admin.InteractiveUserFormPanel.title": "Utilisateur interactif",
+    "admin.EnrolmentZonesPicker.table.municipality": "Municipalité",
+    "admin.EnrolmentZonesPicker.table.newRow": "Ajouter une ligne",
+    "admin.EnrolmentZonesPicker.table.villages": "Villages",
+    "admin.EnrolmentZonesPicker.table.addButton": "Ajouter une ligne",
+    "admin.EnrolmentOfficerFormPanel.substitutionOfficer": "Agent de substitution",
+    "admin.UserPicker.loadingText": "Chargement…",
+    "admin.UserPicker.clearText": "Effacer",
+    "admin.UserPicker.openText": "Ouvrir",
+    "admin.UserPicker.closeText": "Fermer",
+    "admin.UserMasterPanel.loginDetailsTitle": "Détails de connexion",
+    "admin.UserMasterPanel.language.null": "Sélectionner la langue",
+    "admin.EnrolmentOfficerPicker.loadingText": "Chargement…",
+    "admin.EnrolmentOfficerPicker.clearText": "Effacer",
+    "admin.EnrolmentOfficerPicker.openText": "Ouvrir",
+    "admin.EnrolmentOfficerPicker.closeText": "Fermer"
 }
