ajustement traduction Fiche Inscription

--- a/src/translations/cs_cm.json
+++ b/src/translations/cs_cm.json
@@ -147,7 +147,8 @@
     "claim.edit.services.title": "Soins",
     "claim.edit.services.fetchingPricelist": " (liste de prix à télécharger...)",
     "claim.edit.services.totalClaimed": "Total réclamé : {totalClaimed}",
-    "claim.edit.services.totalApproved": "Total approuvé : {totalApprouved}",
+    "claim.edit.services.totalApproved": "Total approuvé : {totalApproved}",
+    "claim.edit.services.MaxApproved": "La quantité définie est supérieur a la quantité approuvé pour cet élément. Vous serez remboursé uniquement pour {totalApproved} element(s)",
     "claim.edit.services.service": "soin",
     "claim.edit.services.quantity": "Quantité",
     "claim.edit.services.price": "Prix",
@@ -651,6 +652,7 @@
     "insuree.IdentificationType.N": "ID National",
     "insuree.IdentificationType.P": "Passeport",
     "insuree.IdentificationType.V": "Carte d'électeur",
+    "insuree.IdentificationType.F": "Fiche d'identification",
     "insuree.FamilyFilter.showHistory": "Afficher les valeurs historiques",
     "insuree.FamilyOverview.title": "Famille \/ Groupe {label}",
     "insuree.FamilyDetailPanel.title": "Détails de la famille",
@@ -723,6 +725,8 @@
     "insuree.setHeadInsureeDialog.message": "Voulez-vous vraiment changer le chef de famille de {current} à {new} ?",
     "location.RegionPicker.none": "Aucun",
     "location.DistrictPicker.none": "Aucun",
+    "location.Location0Picker.label": "Région",
+    "location.Location1Picker.label": "District",
     "location.Location2Picker.label": "Aire de santé",
     "location.Location2Picker.null": "Tout",
     "location.Location2Picker.none": "Aucun",
