ajustement cs_cm

--- a/src/translations/cs_cm.json
+++ b/src/translations/cs_cm.json
@@ -266,6 +266,9 @@
     "insuree.Insuree.chfId": "N° d'assuré(e)",
     "insuree.Insuree.lastName": "Nom de famille",
     "insuree.Insuree.otherNames": "Autres noms",
+    "insuree.Insuree.dead": "Décédé ?",
+    "insuree.Insuree.dod": "Date de décés",
+    "insuree.Insuree.deathreason": "Raison décés",  
     "location.HealthFacilityFullPath.region": "Région",
     "location.HealthFacilityFullPath.district": "District",
     "location.HealthFacilityFullPath.healthFacility": "FOSA",
