Ajustement Traduction FE Cheque Santé

--- a/src/translations/cs_cm.json
+++ b/src/translations/cs_cm.json
@@ -33,7 +33,7 @@
     "month.11": "Novembre",
     "month.12": "Décembre",
     "admin.mainMenu": "Administration",
-    "admin.menu.products": "Paquet de bénéficess",
+    "admin.menu.products": "Paquet de Prestations",
     "admin.menu.healthFacilities": "Établissements de santé",
     "admin.menu.medicalServicesPrices": "Liste de prix des Services médicaux",
     "admin.menu.medicalItemsPrices": "Liste de prix des produits médicaux",
@@ -52,7 +52,7 @@
     "claim_batch.AccountPreviewer.title": "Comptes",
     "claim_batch.batchRunSummaries.year": "Année",
     "claim_batch.batchRunSummaries.month": "Mois",
-    "claim_batch.batchRunSummaries.product": "Paquet de bénéfices",
+    "claim_batch.batchRunSummaries.product": "Paquet de Prestations",
     "claim_batch.batchRunSummaries.careType": "Type de soins",
     "claim_batch.batchRunSummaries.calculatedDate": "Date calculée",
     "claim_batch.batchRunSummaries.index": "Index",
@@ -62,7 +62,7 @@
     "claim_batch.accountType.4": "Trimestriel",
     "claim_batch.accountType.12": "Mensuel",
     "claim_batch.groupBy": "Groupe par",
-    "claim_batch.groupBy.P": "Paquet de bénéfices",
+    "claim_batch.groupBy.P": "Paquet de Prestations",
     "claim_batch.previewer.dateFrom": "Date du",
     "claim_batch.previewer.dateTo": "Date à",
     "claim.mainMenu": "Prestations",
@@ -76,7 +76,6 @@
     "claim.ClaimFilter.district": "District",
     "claim.claimStatus": "Statut de la prestation",
     "claim.code": "N° de prestation",
-    "claim.codechfId": "Prefix Prestation",
     "claim.guaranteeId": "N° de garantie",
     "claim.claimStatus.null": "tous",
     "claim.claimStatus.1": "Rejeté",
@@ -148,8 +147,7 @@
     "claim.edit.services.title": "Soins",
     "claim.edit.services.fetchingPricelist": " (liste de prix à télécharger...)",
     "claim.edit.services.totalClaimed": "Total réclamé : {totalClaimed}",
-    "claim.edit.services.totalApproved": "Total approuvé : {totalApproved}",
-    "claim.edit.services.MaxApproved": "La quantité définie est supérieur a la quantité approuvé pour cet élément. Vous serez remboursé uniquement pour {totalApproved} element(s)",
+    "claim.edit.services.totalApproved": "Total approuvé : {totalApprouved}",
     "claim.edit.services.service": "soin",
     "claim.edit.services.quantity": "Quantité",
     "claim.edit.services.price": "Prix",
@@ -327,8 +325,8 @@
     "policy.insureeEligibility.antenatalAmountLeft": "Prénatale",
     "policy.insureeEligibility.minDate": "Min Date",
     "policy.insureeEligibility.left": "A gauche",
-    "product.Product": "Paquet de bénéfices",
-    "product.ProductPicker.placehoder": "Rechercher un Paquet de bénéfices...",
+    "product.Product": "Paquet de Prestations",
+    "product.ProductPicker.placehoder": "Rechercher un Paquet de Prestations...",
     "profile.mainMenu": "Profil",
     "profile.menu.changePassword": "Changer de mot de passe",
     "tools.mainMenu": "Outils",
@@ -518,7 +516,7 @@
     "location.HealthFacilityForm.email": "Couriel",
     "claim.openNewTabButton.tooltip": "Ouvrir dans un nouvel onglet",
     "claim.servicesPricelist.missing": "Aucune liste de prix d'articles enregistrée pour la Formation Sanitaire",
-    "claim.itemsPricelist.missing": "Aucune liste de prix d'articles enregistrée pour la Formation Sanitaire",
+    "claim.itemsPricelist.missing": "Aucune liste de prix de services enregistrée pour la Formation Sanitaire",
     "contribution.menu.contributions": "Contributions",
     "contribution.PoliciesPremiums": "{count} Contributions",
     "contribution.PoliciesPremiumsOfPolicy": "{count} Contributions de la Police d'assurance {policy}",
@@ -656,7 +654,6 @@
     "insuree.IdentificationType.N": "ID National",
     "insuree.IdentificationType.P": "Passeport",
     "insuree.IdentificationType.V": "Carte d'électeur",
-    "insuree.IdentificationType.F": "Fiche d'identification",
     "insuree.FamilyFilter.showHistory": "Afficher les valeurs historiques",
     "insuree.FamilyOverview.title": "Famille \/ Groupe {label}",
     "insuree.FamilyDetailPanel.title": "Détails de la famille",
@@ -729,8 +726,6 @@
     "insuree.setHeadInsureeDialog.message": "Voulez-vous vraiment changer le chef de famille de {current} à {new} ?",
     "location.RegionPicker.none": "Aucun",
     "location.DistrictPicker.none": "Aucun",
-    "location.Location0Picker.label": "Région",
-    "location.Location1Picker.label": "District",
     "location.Location2Picker.label": "Aire de santé",
     "location.Location2Picker.null": "Tout",
     "location.Location2Picker.none": "Aucun",
@@ -1019,7 +1014,7 @@
     "medical.service.deleteServiceDialog.message": "Êtes-vous sûr de vouloir supprimer ce service ?",
     "medical.service.update.mutationLabel": "Modification de service médical",
     "medical.item.MedicalItemOverview.newTitle": "Nouvel article médical",
-    "medical.item.medicalItemSummaries": "{count} article(s) médical(aux) trouvé(s)",
+    "medical.item.medicalItemSummaries": "{count} service(s) médical(aux) trouvé(s)",
     "medical.addNewMedicalItem.tooltip": "Ajouter un article médical",
     "medical.item.careType": "Type de soins",
     "medical.item.category": "Catégorie",
@@ -1043,7 +1038,7 @@
     "medical.item.deleteDialog.title": "Confirmer la suppression",
     "medical.item.deleteDialog.yes.button": "Oui",
     "medical.item.deleteItem.tooltip": "Effacer l'article",
-    "medical.item.deleteItemDialog.message": "Êtes-vous sûr de vouloir supprimer cet article ?",
+    "medical.item.deleteItemDialog.message": "Êtes-vous sûr de vouloir supprimer ce service ?",
     "medical.item.updateMedicalItem.mutationLabel": "Modification d'un produit médical",
     "medical_pricelist.pricelistsSearcher.table.title": "{count} listes de prix",
     "medical_pricelist.name": "Nom",
@@ -1277,7 +1272,7 @@
     "profile.ChangePasswordPage.confirmPasswordLabel": "Confirmer le nouveau mot de passe",
     "profile.ChangePasswordPage.submitButton": "Envoyer",
     "medical.DiagnosisPicker.placeholder": "Rechercher un diagnostic...",
-    "medical.ItemPicker.placeholder": "Rechercher un article...",
+    "medical.ItemPicker.placeholder": "Rechercher un service...",
     "medical.ItemPicker.label": "Article",
     "medical.ServicePicker.placeholder": "Service de recherche...",
     "medical.ServicePicker.label": "Service",
@@ -2105,5 +2100,10 @@
         "amount": "Montant",
         "reconciliationId": "Id de réconciliation",
         "reconciliationDate": "Date de réconciliation"
-    }
+    },
+    "claim.edit.services.MaxApproved": "La quantité définie est supérieur a la quantité approuvé pour cet élément. Vous serez remboursé uniquement pour {totalApproved} element(s)",
+    "location.Location0Picker.label": "Région",
+    "location.Location1Picker.label": "District",
+    "insuree.IdentificationType.F": "Fiche d'identification",
+    "claim.codechfId": "Prefix Prestation"
 }
